@@ -131,7 +131,7 @@ void TCPNameserver::getQuestion(int fd, char *mesg, int pktlen, const struct soc
 
 void *TCPNameserver::doConnection(void *data)
 {
-  int fd=(int)data; // gotta love C
+  int fd=(int)data; // gotta love C (generates a harmless warning on opteron)
   pthread_detach(pthread_self());
 
   try {
